# xorcrypt

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  main.rs
